# pixel

./: .env  .gitignore  Dockerfile  LICENSE  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
backend/: .gitignore  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
backend/native/: CMakeLists.txt
backend/native/src/: filtering.cpp
backend/native/src/include/: com_example_mypixel_service_FilteringService.h  com_example_mypixel_service_FilteringServiceNative.h
deploy/: .env  docker-compose.cache.yml  docker-compose.db.yml  docker-compose.install.yml  docker-compose.monitoring.yml  docker-compose.postgres.yml  docker-compose.redis.yml  (+2 more)
image-processor/native/: CMakeLists.txt  build.gradle.kts
image-processor/native/src/: jni_hello.cpp
image-processor/native/src/include/: com_example_mypixel_processor_OpenCv.h
node/pixel/: __init__.py  pyproject.toml
node/pixel/core/: __init__.py  metadata.py  node.py
node/pixel/examples/: custom_node_example.py  example_usage.py
node/pixel/models/: node.py
node/pixel/nodes/: bilateral_filter_node.py  blur_node.py  box_filter_node.py  combine_node.py  floor_node.py  gaussian_blur_node.py  input_node.py  median_blur_node.py  output_file_node.py  output_node.py  resnet50_node.py  s3_input_node.py  s3_output_node.py  string_node.py  vector2d_node.py
node/pixel/sdk/: client.py  flow_decorator.py  node_flow.py  storage_client.py
node/pixel/sdk/models/: node_decorator.py
node/pixel/sdk/nodes/: bilateral_filter_node.py  blur_node.py  box_filter_node.py  combine_node.py  floor_node.py  gaussian_blur_node.py  grayscale_node.py  input_node.py  label_mapper_node.py  median_blur_node.py  mobilenet_classify_node.py  normalize_node.py  onnx_model_node.py  output_file_node.py  output_node.py  resize_node.py  resnet50_node.py  s3_input_node.py  s3_output_node.py  softmax_node.py  string_node.py  threshold_node.py  topk_node.py  vector2d_node.py
node/pixel/server/: docker_executor.py  load_nodes.py  main.py  runner.py
(+819 files in other folders)
