[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-sdk"
version = "1.0.14"
description = "Python client library for the pixel app"
authors = [{ name = "pixel", email = "polina@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.25.0"
]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["examples", "test_res"]
